src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>B2B Care</fullName>
        <description>Support Process for B2B Care</description>
        <isActive>true</isActive>
        <values>
            <fullName>Assigned</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In progress</fullName>
        </values>
        <values>
            <fullName>On- hold - External</fullName>
        </values>
        <values>
            <fullName>On-hold - Customer</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Resolved</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>B2B Care Enquiry</fullName>
        <description>Support Process for B2B Care for Emails</description>
        <isActive>true</isActive>
        <values>
            <fullName>Assigned</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Enquiry</fullName>
        </values>
        <values>
            <fullName>In progress</fullName>
        </values>
        <values>
            <fullName>On- hold - External</fullName>
        </values>
        <values>
            <fullName>On-hold - Customer</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Resolved</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>B2B Care Planned And Network</fullName>
        <description>Support Process for Planned Maintenance and Network Outage Case</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Resolved</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Default</fullName>
        <description>Default support process created for Orchestrator installation</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>LG_AppointmentSupportProcess</fullName>
        <description>Appointment Support Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed - Skipped</fullName>
        </values>
        <values>
            <fullName>Follow Up</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>LG_FollowOnOrderProcess</fullName>
        <description>Support process for Follow on Orders</description>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Follow Up</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>LG_OMSupportProcess</fullName>
        <description>Support Process for OM Cases</description>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Support</fullName>
        <description>Support</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>USMS Ticket Care</fullName>
        <description>Support Process for USMS and CaMa</description>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>B2B_Account_Name__c</fullName>
        <label>Account Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Alternate_Contact_Name__c</fullName>
        <label>Alternate Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Alternate_Contact_Number__c</fullName>
        <label>Alternate Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>B2B_Alternate_Email__c</fullName>
        <label>Alternate Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>B2B_Care_Affected_Services__c</fullName>
        <description>It will capture the affected services from USMS.</description>
        <label>Affected Services</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Care_Cancellation_Code__c</fullName>
        <description>This is a picklist to store the cancellation code while cancelling the CaMa ticket.</description>
        <label>Cancellation Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01  Kunde verweigert Zutritt</fullName>
                </value>
                <value>
                    <fullName>02  laut Kd. wieder in Ordnung</fullName>
                </value>
                <value>
                    <fullName>03  VOM KUNDEN WIDERRUFEN</fullName>
                </value>
                <value>
                    <fullName>04  Fehler Innendienst</fullName>
                </value>
                <value>
                    <fullName>05  Kunde zieht Störung fehlt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>B2B_Care_Case_Pause_Time__c</fullName>
        <defaultValue>TEXT(0)</defaultValue>
        <label>Case Pause Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Care_Created_Ticket_From_USMS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will be checked when a ticket is created from USMS.</description>
        <label>Created Ticket From USMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>B2B_Care_Element_Id__c</fullName>
        <description>It captures the element id from USMS.</description>
        <label>Element Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Care_PE_Customer_Country_Info__c</fullName>
        <description>This informs about the country of the customer. It will help us deliver requirements with PE standards.</description>
        <formula>IF( ISBLANK( LG_Service__c ) ,   TEXT( Account.LG_VisitCountry__c ),  LG_Service__r.LG_Address__r.cscrm__Country__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Country Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Care_Service_Billing_Account__c</fullName>
        <description>Billing Account Number from Service Object</description>
        <formula>IF(  ISBLANK( LG_Billing_Account__c )  ,   LG_Service__r.B2B_Care_Billing_Account_Number__c  ,   LG_Billing_Account__r.LG_BillingAccountNumber__c )</formula>
        <label>Service Billing Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Case_Assigned_Date__c</fullName>
        <description>This field will capture the time when a case is assigned to a user</description>
        <label>Case Assigned Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>B2B_Case_UnAssigned_Level1__c</fullName>
        <description>Subtracting 30min from case creation date.</description>
        <formula>CreatedDate - 30/1440</formula>
        <label>B2B Case UnAssigned Level1</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>B2B_Completion_Date__c</fullName>
        <label>Completion Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Completion_Status__c</fullName>
        <label>Completion Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Completion_Time__c</fullName>
        <label>Completion Time</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Customer_Number__c</fullName>
        <label>Customer Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Send_Case_Acknowledge_Notification__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checkbox to be used to send notification emails to Contact</description>
        <label>Send Case Acknowledgement Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>B2B_Customer_Situation__c</fullName>
        <label>Customer Situation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Error_Code__c</fullName>
        <label>Error Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Error_Message__c</fullName>
        <label>Error Message</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Fault_Code__c</fullName>
        <label>Fault Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Finding_Code__c</fullName>
        <label>Finding Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Manager_Email__c</fullName>
        <description>This field will store the case owners Manager&apos;s Name</description>
        <label>Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>B2B_Manager_FName__c</fullName>
        <label>Manager FName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Not_Done_Code__c</fullName>
        <label>Not Done Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_OLA_Reports__c</fullName>
        <description>Check the OLA assignments.</description>
        <formula>IF( (NOW() - CreatedDate &gt;= 30/1440 &amp;&amp; BEGINS(OwnerId  , &apos;00G&apos;) &amp;&amp;  ISBLANK( B2B_Case_Assigned_Date__c ) ) , &apos;QUEUE&apos; , 
        IF( (NOW() - B2B_Case_Assigned_Date__c &gt;= 90/1440 &amp;&amp; BEGINS(OwnerId, &apos;005&apos;)), &apos;USER&apos;, &apos;NA&apos;))</formula>
        <label>OLA Reports</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Order_Comment__c</fullName>
        <label>Cama Order Comment</label>
        <length>5742</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>B2B_Order_Remarks__c</fullName>
        <label>Order Remarks</label>
        <length>105</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Order_Status__c</fullName>
        <label>Order Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Order_Type__c</fullName>
        <label>Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>F2B</fullName>
                </value>
                <value>
                    <fullName>S2B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>B2B_Outage_Service__c</fullName>
        <label>Outage Service</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Outage_Type__c</fullName>
        <label>Outage Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Override_Profile__c</fullName>
        <label>Override Profile</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Position_Comment__c</fullName>
        <label>Position Comment</label>
        <length>105</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Preferred_Communication_Channel__c</fullName>
        <description>Field to capture preferred communication channel for the customer</description>
        <label>Preferred Communication Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>B2B_Problem_Code__c</fullName>
        <label>Problem Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Region__c</fullName>
        <label>Region</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Solution_Code__c</fullName>
        <label>Solution Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Source_Code__c</fullName>
        <label>Source Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Status_Change_Code__c</fullName>
        <label>Status Change Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Success__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>B2B_Technician_Id__c</fullName>
        <label>Technician Id</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Technician_Name__c</fullName>
        <label>Technician Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Temporary_Date__c</fullName>
        <label>Assigned Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>B2B_Ticket_Priority__c</fullName>
        <label>Ticket Priority</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Work_Info_Notes__c</fullName>
        <label>Work Info Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>B2B_Work_Info_Type__c</fullName>
        <label>Work Info Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Communication</fullName>
                </value>
                <value>
                    <fullName>Customer Follow-up</fullName>
                </value>
                <value>
                    <fullName>Customer Status Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSPOFA__Orchestration_Step_Close_Reason__c</fullName>
        <label>Orchestration Step Close Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed successfully</fullName>
                </value>
                <value>
                    <fullName>Could not be completed</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Cannot Fix</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSPOFA__Orchestration_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Orchestration Step</label>
        <referenceTo>CSPOFA__Orchestration_Step__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CaMa_Ticket_ID__c</fullName>
        <externalId>true</externalId>
        <label>CaMa Ticket ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <description>Used to input Customer Name if the query is related Customer&apos;s account</description>
        <inlineHelpText>Only enter if the enquiry is regarding a Customer&apos;s account</inlineHelpText>
        <label>Customer Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dimension_Data_Ticket_ID__c</fullName>
        <externalId>true</externalId>
        <label>Dimension Data Ticket ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITUMA_Ticket_ID__c</fullName>
        <externalId>true</externalId>
        <label>ITUMA Ticket ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Additional_Supporting_Info__c</fullName>
        <description>This is the additional supporting info to give you more information about the case.</description>
        <label>Additional Supporting Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LG_Adjustment_amount2__c</fullName>
        <description>Field for calculating the adjustment amount for linked adjustment 2 record</description>
        <formula>UM_Linked_Adjustment_2__r.Total_Amount__c</formula>
        <inlineHelpText>Adjustment Amount for linked adjustment 2 field</inlineHelpText>
        <label>Adjustment amount 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LG_Adjustment_amount_1__c</fullName>
        <description>Formula field for calculating the adjustment amount for linked adjustment 1 record</description>
        <formula>LG_Linked_Adjustment__r.Total_Amount__c</formula>
        <inlineHelpText>Adjustment Amount for linked adjustment 1 field</inlineHelpText>
        <label>Adjustment amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LG_B2B_SLA_Paused_Date__c</fullName>
        <description>This date time field will store the time till when a SLA on a case will be paused.</description>
        <label>SLA/OLA Pause Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LG_B2B_USMS_Categorization_Tier1__c</fullName>
        <label>Categorization Tier1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Connectivity</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_B2B_USMS_Categorization_Tier2__c</fullName>
        <label>Categorization Tier2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LG_B2B_USMS_Categorization_Tier1__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internet</fullName>
                </value>
                <value>
                    <fullName>Signal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_B2B_USMS_Company__c</fullName>
        <label>Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_B2B_USMS_Impact__c</fullName>
        <label>Impact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1-Extensive/Widespread</fullName>
                </value>
                <value>
                    <fullName>2-Significant/Large</fullName>
                </value>
                <value>
                    <fullName>3-Moderate/Limited</fullName>
                </value>
                <value>
                    <fullName>4-Minor/Localized</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_B2B_USMS_Service__c</fullName>
        <label>Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ingress DE</fullName>
                </value>
                <value>
                    <fullName>IP Core Netcool Alarm DE</fullName>
                </value>
                <value>
                    <fullName>FBE Services DE</fullName>
                </value>
                <value>
                    <fullName>B2B VPN DE PROD</fullName>
                </value>
                <value>
                    <fullName>Internal Provisioning Service</fullName>
                </value>
                <value>
                    <fullName>HPBX PROD DE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_Care_Business_Area__c</fullName>
        <label>Business Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>B2B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
     <fields>
        <fullName>LG_Care_Impacted_Customers__c</fullName>
        <label>Impacted Customers</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LG_B2B_USMS_Service__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>4-&quot;&gt;= 4 customers&quot;</fullName>
                </value>
                <value>
                    <fullName>1-&quot;1 customer&quot;</fullName>
                </value>
                <value>
                    <fullName>99-n/a</fullName>
                </value>
                <value>
                    <fullName>3-&quot;&gt;=4 sites/services of 1 customer&quot;</fullName>
                </value>
                <value>
                    <fullName>2-&quot;1-3 sites/services of 1 customer&quot;</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_Care_Major_Incident__c</fullName>
        <label>Major Incident</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10-No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_Care_SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LG_B2B_USMS_Service__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2-Basic SLA / MTTR 8h</fullName>
                </value>
                <value>
                    <fullName>3-Medium SLA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_Care_Service_Impact__c</fullName>
        <label>Service Impact</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LG_B2B_USMS_Service__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2-Service Degradation</fullName>
                </value>
                <value>
                    <fullName>4-Service Outage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_Care_Support_Time__c</fullName>
        <label>Support Time</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LG_Care_SLA__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2-EBH</fullName>
                </value>
                <value>
                    <fullName>3-7x24</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_B2B_USMS_Urgency__c</fullName>
        <label>Urgency</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Billing_Account_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a look up field to Billing Account.</description>
        <inlineHelpText>Mandatory for type Billing Account(If Record Type is Admin Change Request). If Record Type is Billing Query then this field is not required if type is Request and case reason is Duplicate Invoice OR if type is Charge Dispute and reason is Extra Charges.</inlineHelpText>
        <label>Billing Account 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>csconta__Billing_Account__c.csconta__Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>csconta__Billing_Account__c</referenceTo>
        <relationshipLabel>Cases (Billing Account 2)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_Billing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a look up field to the Billing Account Object.</description>
        <label>Billing Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>csconta__Billing_Account__c.csconta__Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>csconta__Billing_Account__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_Care_Down_Time_in_Minutes__c</fullName>
        <defaultValue>15</defaultValue>
        <label>Down Time in Minutes</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_Care_Email_Sent_to_Customer_On__c</fullName>
        <label>Email Sent to Customer On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LG_Care_USMS_Service__c</fullName>
        <label>USMS Service</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Case_Reason__c</fullName>
        <description>This is a Case reason dependent field.</description>
        <label>Case Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not working</fullName>
                </value>
                <value>
                    <fullName>Missing Device</fullName>
                </value>
                <value>
                    <fullName>Damaged Device</fullName>
                </value>
                <value>
                    <fullName>Device Error</fullName>
                </value>
                <value>
                    <fullName>Lost/Stolen</fullName>
                </value>
                <value>
                    <fullName>Disabled</fullName>
                </value>
                <value>
                    <fullName>Severe</fullName>
                </value>
                <value>
                    <fullName>Slight</fullName>
                </value>
                <value>
                    <fullName>Service Affecting</fullName>
                </value>
                <value>
                    <fullName>Performance Affecting</fullName>
                </value>
                <value>
                    <fullName>Call Noise</fullName>
                </value>
                <value>
                    <fullName>Echo</fullName>
                </value>
                <value>
                    <fullName>Service Down</fullName>
                </value>
                <value>
                    <fullName>Quality Affecting</fullName>
                </value>
                <value>
                    <fullName>Service Degraded</fullName>
                </value>
                <value>
                    <fullName>Service Availability</fullName>
                </value>
                <value>
                    <fullName>Service Performance</fullName>
                </value>
                <value>
                    <fullName>Fault Resolution</fullName>
                </value>
                <value>
                    <fullName>Installation</fullName>
                </value>
                <value>
                    <fullName>Complaint Resolution</fullName>
                </value>
                <value>
                    <fullName>Call Feature</fullName>
                </value>
                <value>
                    <fullName>Technical Setting</fullName>
                </value>
                <value>
                    <fullName>Incorrect Charges</fullName>
                </value>
                <value>
                    <fullName>Extra Charges</fullName>
                </value>
                <value>
                    <fullName>Missing Payment</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Reminder</fullName>
                </value>
                <value>
                    <fullName>Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>Customer Bereavement</fullName>
                </value>
                <value>
                    <fullName>Natural Disaster</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_Change_Effective_Date__c</fullName>
        <description>This depicts the date after which the change will be effective.</description>
        <label>Change Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_Choose_Specific_Role__c</fullName>
        <description>Used for sending alert for planned maintenance role</description>
        <label>Choose Specific Role</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business User</fullName>
                </value>
                <value>
                    <fullName>Financial Contact</fullName>
                </value>
                <value>
                    <fullName>Technical Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_CustomerAccountBalance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Account Balance</label>
        <referenceTo>LG_CustomerAccountBalance__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_Date_Paid__c</fullName>
        <description>Date on which due amount is paid.</description>
        <label>Date Paid</label>
        <type>Date</type>
    </fields>
</CustomObject>